--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "backend/index.js",
     "scripts": {
         "start": "node backend/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "cd frontend && npm run build && cd .. cd backend && npm run build && cd .."
     },
     "author": "",
     "license": "ISC",
