--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-
+YOUTUBE_API_KEY=AIzaSyAlEglZcMRIYQ4HQpIgPZNX4NWpmCIDMDU
+GEMINI_API_KEY=AIzaSyCKUGdOjIUHvjcfQ3u5R7PAIts3Rak0tdM
+MONGODB_URI=mongodb+srv://harshit6239:manchanda21452@cluster0.j35iv9p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=yt-stud-bud
+JWT_SECRET=yt-stud-bud-webtoken
+CLOUDINARY_CLOUD_NAME=dz9wtcaxr
+CLOUDINARY_API_KEY=542323483372521
+CLOUDINARY_API_SECRET=5tYlZTc8AKKPjEo3BxCNVNo7Djw
+NODE_ENV=production
+VITE_JWT_SECRET=yt-stud-bud-webtoken
